force-app/main/default/objects/MHQ__c/fields/Sex_Africa__c.field-meta.xml
<CustomField>
    <fullName>Sex_Africa__c</fullName>
    <inlineHelpText>Since 1977 have you: Had sex with anyone who was born in or lived in Africa since 1977?</inlineHelpText>
    <label>35. Sex Africa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>