force-app/main/default/objects/MHQ__c/fields/sex_in_exchange__c.field-meta.xml
<CustomField>
    <fullName>sex_in_exchange__c</fullName>
    <inlineHelpText>In the past 5 years have you: Engaged in sex in exchange for money, drugs, or other items?</inlineHelpText>
    <label>31. sex in exchange</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>