force-app/main/default/objects/MHQ__c/fields/sex_in_exchange_for_money_or_drugs__c.field-meta.xml
<CustomField>
    <fullName>sex_in_exchange_for_money_or_drugs__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had sexual contact with anyone who has engaged in sex in exchange for money or drugs?</inlineHelpText>
    <label>16. sex in exchange for money or drugs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>