force-app/main/default/objects/MHQ__c/fields/sex_with_a_man__c.field-meta.xml
<CustomField>
    <fullName>sex_with_a_man__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had sex with a man who has ever had sex with a man in the previous 5 years?</inlineHelpText>
    <label>15. sex with a man</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>