force-app/main/default/objects/MHQ__c/fields/shots_or_vaccines__c.field-meta.xml
<CustomField>
    <fullName>shots_or_vaccines__c</fullName>
    <inlineHelpText>In the past 12 weeks have you: Had any shots or vaccines?</inlineHelpText>
    <label>03. shots or vaccines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>