force-app/main/default/objects/MHQ__c/fields/skin_lesions_from_smallpox_vaccine__c.field-meta.xml
<CustomField>
    <fullName>skin_lesions_from_smallpox_vaccine__c</fullName>
    <inlineHelpText>In the past 12 weeks have you: Developed skin lesions from contact with someone who received a smallpox vaccine?</inlineHelpText>
    <label>05. skin lesions from  smallpox vaccine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>