force-app/main/default/objects/MHQ__c/fields/smallpox_vaccination__c.field-meta.xml
<CustomField>
    <fullName>smallpox_vaccination__c</fullName>
    <inlineHelpText>In the past 12 weeks have you: Had contact with someone who had a smallpox vaccination?</inlineHelpText>
    <label>04. smallpox vaccination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>