force-app/main/default/objects/MHQ__c/fields/someones_blood__c.field-meta.xml
<CustomField>
    <fullName>someones_blood__c</fullName>
    <inlineHelpText>In the past 12 months have you: Come into contact with or exposed to someone else’s blood, known or suspected to be infected with HIV, hepatitis B or hepatitis C?</inlineHelpText>
    <label>25. someones blood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>