force-app/main/default/objects/MHQ__c/fields/specific_medications__c.field-meta.xml
<CustomField>
    <fullName>specific_medications__c</fullName>
    <inlineHelpText>In the past 12 months have you: Taken any of the following medications: Accutane, Soriatane, Tegison (retinoids) or Propecia (finasteride)?</inlineHelpText>
    <label>28. specific medications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>