force-app/main/default/objects/MHQ__c/fields/specific_sti__c.field-meta.xml
<CustomField>
    <fullName>specific_sti__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had or been treated for HPV or genital herpes, syphilis, gonorrhea or other sexually transmitted infections? If Yes: Indicate specific infection</inlineHelpText>
    <label>14.1 specific sti</label>
    <type>TextArea</type>
</CustomField>