force-app/main/default/objects/MHQ__c/fields/std__c.field-meta.xml
<CustomField>
    <fullName>std__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had sex with anyone who has or has tested positive for the HIV, HTLV, syphilis, hepatitis B or hepatitis C or another sexually transmitted disease?</inlineHelpText>
    <label>24. std</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>