force-app/main/default/objects/MHQ__c/fields/sti__c.field-meta.xml
<CustomField>
    <fullName>sti__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had or been treated for HPV or genital herpes, syphilis, gonorrhea or other sexually transmitted infections?</inlineHelpText>
    <label>14. sti</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>