force-app/main/default/objects/MHQ__c/fields/taken_following_medications__c.field-meta.xml
<CustomField>
    <fullName>taken_following_medications__c</fullName>
    <inlineHelpText>Have you EVER: Taken any of the following medications: growth hormone from human pituitary glands, insulin from cows (bovine or beef insulin), hepatitis B immune globulin or an unlicensed vaccine?</inlineHelpText>
    <label>41. taken following medications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>