force-app/main/default/objects/MHQ__c/fields/tattoo__c.field-meta.xml
<CustomField>
    <fullName>tattoo__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had a tattoo in which sterile procedures were not used?</inlineHelpText>
    <label>20. tattoo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>