force-app/main/default/objects/MHQ__c/fields/tattoo_state_regulated__c.field-meta.xml
<CustomField>
    <fullName>tattoo_state_regulated__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had a tattoo in which sterile procedures were not used? If yes, was tattoo applied by a state regulated entity with sterile needles and non reused ink?</inlineHelpText>
    <label>20.1 tattoo state regulated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>