force-app/main/default/objects/MHQ__c/fields/test_for_West_Nile__c.field-meta.xml
<CustomField>
    <fullName>test_for_West_Nile__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had a positive or reactive test for West Nile virus infection?</inlineHelpText>
    <label>10. test for West Nile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>