force-app/main/default/objects/MHQ__c/fields/toxic_exposure__c.field-meta.xml
<CustomField>
    <fullName>toxic_exposure__c</fullName>
    <inlineHelpText>Have you EVER: Had a toxic exposure to heavy metals such as lead, mercury or gold?</inlineHelpText>
    <label>43. toxic exposure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>