force-app/main/default/objects/MHQ__c/fields/transplant_or_graft__c.field-meta.xml
<CustomField>
    <fullName>transplant_or_graft__c</fullName>
    <inlineHelpText>In the past 12 months have you: Had a transplant or graft from someone other than yourself, such as organ, bone marrow, stem cell, cornea, sclera, bone, skin, or other tissues?</inlineHelpText>
    <label>11. transplant or graft</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>