force-app/main/default/objects/MHQ__c/fields/transplant_or_medical_procedure__c.field-meta.xml
<CustomField>
    <fullName>transplant_or_medical_procedure__c</fullName>
    <inlineHelpText>Have you EVER: Had a transplant or medical procedure involving exposure to organs, tissues, or living cells from an animal?</inlineHelpText>
    <label>53. transplant or medical procedure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>