force-app/main/default/objects/MHQ__c/fields/tuberculosis_chagas__c.field-meta.xml
<CustomField>
    <fullName>tuberculosis_chagas__c</fullName>
    <inlineHelpText>Have you EVER: Had adult T-cell leukemia or unexplained paraparesis (partial paralysis of the limbs)?</inlineHelpText>
    <label>46. tuberculosis chagas babesiosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>