force-app/main/default/objects/MHQ__c/fields/United_Kingdom__c.field-meta.xml
<CustomField>
    <fullName>United_Kingdom__c</fullName>
    <inlineHelpText>From 1980 to 1996 have you: Spent time that adds up to 3 months or more in the United Kingdom?</inlineHelpText>
    <label>37. United Kingdom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>