force-app/main/default/objects/MHQ__c/fields/United_Kingdom_city_country_when__c.field-meta.xml
<CustomField>
    <fullName>United_Kingdom_city_country_when__c</fullName>
    <description>Spent time that adds up to 3 months or more in the United Kingdom? Provide city, country and when (month/year).</description>
    <label>37.1 United Kingdom city country when</label>
    <length>255</length>
    <type>Text</type>
</CustomField>