force-app/main/default/objects/MHQ__c/fields/used_needles__c.field-meta.xml
<CustomField>
    <fullName>used_needles__c</fullName>
    <inlineHelpText>In the past 3 years have you: Used needles to take drugs, steroids, or anything not prescribed by your doctor?</inlineHelpText>
    <label>32. used needles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>