force-app/main/default/objects/MHQ__c/fields/West_Nile_virus__c.field-meta.xml
<CustomField>
    <fullName>West_Nile_virus__c</fullName>
    <inlineHelpText>In the past 12 months have you: Been diagnosed with or had suspicion of West Nile virus infection?</inlineHelpText>
    <label>09. West Nile virus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>