force-app/main/default/objects/MHQ__c/fields/Wiskott_Aldrich_syndrome__c.field-meta.xml
<CustomField>
    <fullName>Wiskott_Aldrich_syndrome__c</fullName>
    <inlineHelpText>Has anyone in the maternal/paternal family had: Wiskott-Aldrich syndrome?</inlineHelpText>
    <label>66. Wiskott-Aldrich syndrome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>