force-app/main/default/objects/MHQ__c/fields/xenotransplantation__c.field-meta.xml
<CustomField>
    <fullName>xenotransplantation__c</fullName>
    <inlineHelpText>Have you EVER: Been a recipient of a xenotransplantation product?</inlineHelpText>
    <label>56. xenotransplantation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>