force-app/main/default/objects/MHQ__c/fields/ZIKV__c.field-meta.xml
<CustomField>
    <fullName>ZIKV__c</fullName>
    <inlineHelpText>During this pregnancy have you: Had a medical diagnosis of ZIKV infection at any point?</inlineHelpText>
    <label>06. ZIKV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MHQ</valueSetName>
    </valueSet>
</CustomField>